# verso

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json
.claude/: settings.local.json
docs/: migration-to-burn.md  ml-design.md  rust-vs-python-ml.md
erd_app/: main.ts
erd_doc/: Cargo.toml
erd_doc/src/: ast.rs  compile_tex.rs  dim.rs  eval.rs  lib.rs  parse.rs  report.rs  verify.rs
erd_doc/tests/: integration.rs
erd_doc/tests/fixtures/: basic_algebra.erd  dimensional.erd  full_document.erd  proof_chain.erd  should_fail.erd  trig_identities.erd
erd_model/: Cargo.toml
erd_symbolic/: Cargo.toml  README.md
erd_training/: Cargo.toml  pyproject.toml
erd_training/erd_training/: config.py  dataset.py  evaluate.py  model.py  rl_train.py  train.py  vocab.py
erd_training/src/: config.rs  dataset.rs  evaluate.rs  lib.rs  ml_simplify.rs  model.rs  policy_dataset.rs  policy_evaluate.rs  policy_model.rs  policy_rl_train.rs  policy_train.rs  rl_train.rs  schedule.rs  train.rs  vocab.rs
erd_viewer/: Cargo.toml
erd_viewer/src/: lib.rs
features/: README.md  bang-directives.md  conceptual-dimensions.md  cross-references.md  declarations.md  erd-support.md  erd-syntax.md  fix-training-build.md  (+21 more)
ogma_doc/: Cargo.toml
ogma_doc/src/: ast.rs  bib.rs  compile_tex.rs  config.rs  dim.rs  eval.rs  lib.rs  parse.rs  report.rs  source.rs  tex_blocks.rs  tex_preamble.rs  tex_prose.rs  tex_queries.rs  tex_refs.rs  tex_structure.rs  verify.rs
ogma_doc/src/compile_tex/: tests.rs
ogma_doc/tests/: integration.rs
ogma_doc/tests/fixtures/: .ogma.jsonc  derivatives.ogma  full_document.ogma  numerical_fallback.ogma  proof_chain.ogma  syntax_guide.ogma  trig_identities.ogma  units.ogma
verso_doc/: Cargo.toml
verso_doc/src/: ast.rs  compile_tex.rs  config.rs  dim.rs  eval.rs  lib.rs  parse.rs  report.rs  source.rs  tex_blocks.rs  tex_prose.rs  tex_queries.rs  tex_refs.rs  tex_structure.rs  verify.rs
verso_doc/src/compile_tex/: tests.rs
verso_doc/tests/: integration.rs
verso_doc/tests/fixtures/: basic_algebra.verso  dim_fail.verso  dimensional.verso  full_document.verso  numerical_fallback.erd  numerical_fallback.verso  proof_chain.verso  should_fail.verso  syntax_guide.verso  trig_identities.erd  trig_identities.verso  units.verso
verso_training/: Cargo.toml
verso_training/src/: dataset.rs  evaluate.rs  lib.rs  ml_simplify.rs  policy_dataset.rs  policy_evaluate.rs  policy_model.rs  policy_rl_train.rs  policy_train.rs  vocab.rs
(+105 files in other folders)
