[package]
name = "erd_doc"
version = "0.1.0"
edition = "2021"

[dependencies]
erd_symbolic = { path = "../erd_symbolic" }
clap = { version = "4", features = ["derive"] }
notify = "7"
notify-debouncer-mini = "0.5"
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "io-std", "rt-multi-thread"] }
