[package]
name = "erd_training"
version = "0.1.0"
edition = "2021"

[dependencies]
erd_symbolic = { path = "../erd_symbolic" }
burn = { version = "0.20", features = ["wgpu", "autodiff", "ndarray", "dataset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
