[package]
name = "erd_viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
erd_model = { path = "../erd_model" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window", "Document",
  "HtmlCanvasElement",
  "HtmlVideoElement",
  "WebGl2RenderingContext",
  "WebGlBuffer", "WebGlProgram", "WebGlShader",
  "WebGlTexture", "WebGlUniformLocation",
  "ImageBitmap",
  "console"
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
