[package]
name = "verso_doc"
version = "0.1.0"
edition = "2021"

[dependencies]
verso_symbolic = { path = "../verso_symbolic" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
notify-debouncer-mini = "0.7"
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "io-std", "rt-multi-thread"] }
