[package]
name = "verso_training"
version = "0.1.0"
edition = "2021"

[dependencies]
verso_symbolic = { path = "../verso_symbolic" }
burn = { version = "0.20", features = ["wgpu", "autodiff", "ndarray", "dataset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
rustyline = "17"
